# Job-Hunter-Agent

./: .gitignore  README.md  candidate-key.json  check_rag.py  cloudfront-config.json  fix_cors.py  fix_cors_headers.py  fix_cors_update.py  fix_sfn_outputpath.py  fix_sfn_resultpath.py  match-key.json  pyproject.toml  rag_s3_policy.json  resume-coach-policy.json  update_sfn.py
.github/workflows/: deploy.yml
agents/agent1_parser/: lambda_function.py
agents/agent2_skills/: lambda_function.py
agents/agent3_salary/: lambda_function.py
agents/agent4_difficulty/: lambda_function.py
agents/agent5_gaps/: lambda_function.py
agents/aggregator/: lambda_function.py
agents/resume_coach/: resume_coach.py
api/: lambda_proxy.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
infrastructure/: app.py  candidate-key.json  cdk.json  create_opensearch.py  match-key.json
infrastructure/stacks/: database_stack.py  main_stack.py
rag/: embeddings.py  opensearch_client.py  retriever.py
rag/knowledge_base/: career_index.json  populate_index.py
rag_package/: resume_coach.py
rag_package/Events-0.5.dist-info/: RECORD
rag_package/charset_normalizer-3.4.4.dist-info/: RECORD
rag_package/numpy-2.4.2.dist-info/: RECORD
rag_package/protobuf-7.34.0.dist-info/: RECORD
scripts/: seed_data.py
step_functions/: workflow.json
terraform/: .gitignore  README.md  main.tf  outputs.tf  state_machine_definition.json  terraform.tfvars  variables.tf
tests/: test_agent1.py  test_agent2.py  test_agent3.py
(+25 files in other folders)
